==> zoomx/lxyppc-tetrix/quad/ctrl/paparazzi/sw/airborne/arch/stm32/mcu_periph/adc_arch.c <==
#include "mcu_periph/adc.h"
#include <stm32/rcc.h>
#include <stm32/misc.h>
#include <stm32/adc.h>
#include <stm32/gpio.h>
#include <stm32/rcc.h>
#include <stm32/tim.h>
#include <string.h>
#include "std.h"
#include "led.h"
#include BOARD_CONFIG
#define ADC1_GPIO_INIT(gpio) {			\
    (gpio).GPIO_Pin  = GPIO_Pin_1 | GPIO_Pin_0; \
    (gpio).GPIO_Mode = GPIO_Mode_AIN;		\
    GPIO_Init(GPIOB, (&gpio));			\
    (gpio).GPIO_Pin  = GPIO_Pin_5 | GPIO_Pin_3; \
    GPIO_Init(GPIOC, (&gpio));			\
}
#define ADC2_GPIO_INIT(gpio) {			\
    (gpio).GPIO_Pin  = GPIO_Pin_0 | GPIO_Pin_1; \
    (gpio).GPIO_Mode = GPIO_Mode_AIN;		\
    GPIO_Init(GPIOB, (&gpio));			\
    (gpio).GPIO_Pin  = GPIO_Pin_3 | GPIO_Pin_5; \
    GPIO_Init(GPIOC, (&gpio));			\
  }
#define ADC2_GPIO_INIT(gpio) { }

static inline void adc_init_rcc( void )
{ // {{{
#if defined (USE_AD1) || defined (USE_AD2)
    TIM_TypeDef * timer;
    uint32_t rcc_apb;
#if defined(USE_AD_TIM4)
    timer   = TIM4;
    rcc_apb = RCC_APB1Periph_TIM4;
#elif defined(USE_AD_TIM1)
    timer   = TIM1;
    rcc_apb = RCC_APB2Periph_TIM1;
#else
    timer   = TIM2;
    rcc_apb = RCC_APB1Periph_TIM2;
#endif

    TIM_TimeBaseInitTypeDef TIM_TimeBaseStructure;

    RCC_ADCCLKConfig(RCC_PCLK2_Div2);
    RCC_APB1PeriphClockCmd(rcc_apb, ENABLE);
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB |
                   RCC_APB2Periph_GPIOC, ENABLE);
#ifdef USE_AD1
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_ADC1, ENABLE);
#endif
#ifdef USE_AD2
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_ADC2, ENABLE);
#endif

    /* Time Base configuration */
    TIM_TimeBaseStructInit(&TIM_TimeBaseStructure);
    TIM_TimeBaseStructure.TIM_Period        = 0xFF;
    TIM_TimeBaseStructure.TIM_Prescaler     = 0x8;
    TIM_TimeBaseStructure.TIM_ClockDivision = 0x0;
    TIM_TimeBaseStructure.TIM_CounterMode   = TIM_CounterMode_Up;
    TIM_TimeBaseInit(timer, &TIM_TimeBaseStructure);
    TIM_SelectOutputTrigger(timer, TIM_TRGOSource_Update);
    TIM_Cmd(timer, ENABLE);

#endif // defined (USE_AD1) || defined (USE_AD2)
}

static inline void adc_init_irq( void )
{ // {{{
    NVIC_InitTypeDef nvic;
    nvic.NVIC_IRQChannel                   = ADC1_2_IRQn;
    nvic.NVIC_IRQChannelPreemptionPriority = 0;
    nvic.NVIC_IRQChannelSubPriority        = 0;
    nvic.NVIC_IRQChannelCmd                = ENABLE;
    NVIC_Init(&nvic);
}

static inline void adc_init_single(ADC_TypeDef * adc_t,
                   uint8_t chan1, uint8_t chan2,
                   uint8_t chan3, uint8_t chan4)
{
    GPIO_InitTypeDef gpio;
    ADC_InitTypeDef adc;
    uint8_t num_channels, rank;

    // Paranoia, must be down for 2+ ADC clock cycles before calibration
    ADC_Cmd(adc_t, DISABLE);

    /* enable adc_t clock */
    if (adc_t == ADC1) {
#ifdef USE_AD1
        num_channels = NB_ADC1_CHANNELS;
        ADC1_GPIO_INIT(gpio);
#endif
    }
    else if (adc_t == ADC2) {
#ifdef USE_AD2
        num_channels = NB_ADC2_CHANNELS;
        ADC2_GPIO_INIT(gpio);
#endif
    }

    /* Configure ADC */

    adc.ADC_Mode               = ADC_Mode_Independent;
    adc.ADC_ScanConvMode       = ENABLE;
    adc.ADC_ContinuousConvMode = DISABLE;
    adc.ADC_ExternalTrigConv   = ADC_ExternalTrigConv_None;
    adc.ADC_DataAlign          = ADC_DataAlign_Right;
    adc.ADC_NbrOfChannel       = 0; // No. of channels in regular mode
    ADC_Init(adc_t, &adc);

    ADC_InjectedSequencerLengthConfig(adc_t, num_channels);

    rank = 1;
    if (chan1) {
        ADC_InjectedChannelConfig(adc_t, adc_channel_map[0], rank,
                      ADC_SampleTime_41Cycles5);
        rank++;
    }
    if (chan2) {
        ADC_InjectedChannelConfig(adc_t, adc_channel_map[1], rank,
                      ADC_SampleTime_41Cycles5);
        rank++;
    }
    if (chan3) {
        ADC_InjectedChannelConfig(adc_t, adc_channel_map[2], rank,
                      ADC_SampleTime_41Cycles5);
        rank++;
    }
    if (chan4) {
        ADC_InjectedChannelConfig(adc_t, adc_channel_map[3], rank,
                      ADC_SampleTime_41Cycles5);
    }


    ADC_ExternalTrigInjectedConvCmd(adc_t, ENABLE);
#if defined(USE_AD_TIM4)
    ADC_ExternalTrigInjectedConvConfig(adc_t, ADC_ExternalTrigInjecConv_T4_TRGO);
#elif defined(USE_AD_TIM1)
    ADC_ExternalTrigInjectedConvConfig(adc_t, ADC_ExternalTrigInjecConv_T1_TRGO);
#else
    ADC_ExternalTrigInjectedConvConfig(adc_t, ADC_ExternalTrigInjecConv_T2_TRGO);
#endif

    /* Enable ADC<X> JEOC interrupt */
    ADC_ITConfig(adc_t, ADC_IT_JEOC, ENABLE);

    /* Enable ADC<X> */
    ADC_Cmd(adc_t, ENABLE);

    /* Enable ADC<X> reset calibaration register */
    ADC_ResetCalibration(adc_t);

    /* Check the end of ADC<X> reset calibration */
    while (ADC_GetResetCalibrationStatus(adc_t)) ;
    /* Start ADC<X> calibaration */
    ADC_StartCalibration(adc_t);
    /* Check the end of ADC<X> calibration */
    while (ADC_GetCalibrationStatus(adc_t)) ;

}

void adc_init( void ) {

    /* initialize buffer pointers with 0 (not set).
       buffer null pointers will be ignored in interrupt
       handler, which is important as there are no
       buffers registered at the time the ADC trigger
       interrupt is enabled.
    */
    uint8_t channel;
#ifdef USE_AD1
    for(channel = 0; channel < NB_ADC1_CHANNELS; channel++)
        adc1_buffers[channel] = NULL;
#endif
#ifdef USE_AD2
    for(channel = 0; channel < NB_ADC2_CHANNELS; channel++)
        adc2_buffers[channel] = NULL;
#endif

    adc_new_data_trigger = FALSE;
    adc_injected_channels[0] = ADC_InjectedChannel_1;
    adc_injected_channels[1] = ADC_InjectedChannel_2;
    adc_injected_channels[2] = ADC_InjectedChannel_3;
    adc_injected_channels[3] = ADC_InjectedChannel_4;
    adc_channel_map[0] = BOARD_ADC_CHANNEL_1;
    adc_channel_map[1] = BOARD_ADC_CHANNEL_2;
    // FIXME for now we get battery voltage this way
    //    adc_channel_map[2] = BOARD_ADC_CHANNEL_3;
    adc_channel_map[2] = BOARD_ADC_CHANNEL_3;
    adc_channel_map[3] = BOARD_ADC_CHANNEL_4;

    adc_init_rcc();
    adc_init_irq();

// adc_init_single(ADCx, c1, c2, c3, c4)
// {{{
#ifdef USE_AD1
    adc_init_single(ADC1,
#ifdef USE_AD1_1
            1,
#else
            0,
#endif
#ifdef USE_AD1_2
            1,
#else
            0,
#endif
#ifdef USE_AD1_3
            1,
#else
            0,
#endif
#ifdef USE_AD1_4
            1
#else
            0
#endif
    );
#endif // USE_AD1

#ifdef USE_AD2
    adc_init_single(ADC2,
#ifdef USE_AD2_1
            1,
#else
            0,
#endif
#ifdef USE_AD2_2
            1,
#else
            0,
#endif
#ifdef USE_AD2_3
            1,
#else
            0,
#endif
#ifdef USE_AD2_4
            1
#else
            0
#endif
    );
#endif // USE_AD2

// }}}
}
